PSum comparisons are added for different Mass bins

--- a/pass4/Latex/EvSelectionPlots.tex
+++ b/pass4/Latex/EvSelectionPlots.tex
@@ -222,5 +222,81 @@
  \caption{Positrons Rad Tridents: Cluster track X coordinate difference as a function of momentum. }
 \end{figure}
 
+\clearpage
+\newpage
+\subsection*{PSum comparison for different mass bins}
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv1_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_1_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv1_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_1_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv1_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_1_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{20\; MeV < M(ee) < 40\; MeV}$}
+\end{figure}
+
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv2_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_2_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv2_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_2_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv2_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_2_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{40\; MeV < M(ee) < 60\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv3_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_3_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv3_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_3_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv3_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_3_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{60\; MeV < M(ee) < 80\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv4_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_4_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv4_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_4_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv4_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_4_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{80\; MeV < M(ee) < 100\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv5_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_5_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv5_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_5_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv5_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_5_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{100\; MeV < M(ee) < 120\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv6_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_6_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv6_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_6_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv6_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_6_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{120\; MeV < M(ee) < 140\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv7_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_7_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv7_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_7_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv7_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_7_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{140\; MeV < M(ee) < 160\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv8_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_8_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv8_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_8_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv8_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_8_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{160\; MeV < M(ee) < 180\; MeV}$}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfloat{\label{fig:PSumMin_Minv9_All}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_9_All.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv9_AllBut}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_9_AllBut.pdf}}
+  \subfloat{\label{fig:PSumMin_Minv9_CutEffect}\grinp[width=0.32\tw]{Figs/PSumMin_MinvBin_9_CutEffect.pdf}}
+  \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{180\; MeV < M(ee) < 200\; MeV}$}
+\end{figure}
+
 \end{document}
 
