The table for cut efficiencies is added which shows the cut efficiency for data, and each MC category, i.e. Tri, Rad etc. Also the NormalizationPlots.cc file puts efficiencies in the file CutPowers.dat in a form, that is ready to paste in a Latex file

--- a/pass4/Latex/EvSelectionPlots.tex
+++ b/pass4/Latex/EvSelectionPlots.tex
@@ -298,5 +298,42 @@
   \caption{Progress of $\mathrm{P_{Sum}}$ Min cut, for the $\mathrm{180\; MeV < M(ee) < 200\; MeV}$}
 \end{figure}
 
+
+\clearpage
+\newpage
+\subsection*{CutEfficiencies}
+\begin{table}[!htb]
+ \centering
+ \begin{tabular}{|l | c | c | c | c | c |}
+ \hline
+ \bf{CutDescription}   & \bf{Data} & \bf{Tri-beam} & \bf{Rad-beam} & \bf{Wab-beam} & \bf{Tri + Wab}  \\ \hline
+                    PsumMax          & 0.996641          & 0.998864          & 0.998858          & 0.987156          & 0.997881 \\ \hline
+                  PsumMin          & 0.577292          & 0.538798          & 0.827853          & 0.904518          & 0.557535 \\ \hline
+                     clDt          & 0.973964          & 0.994342          & 0.997401          & 0.993122          & 0.994241 \\ \hline
+                      Pem          & 0.999911          & 0.999973          & 0.999969          & 1          & 0.999975 \\ \hline
+                    d0\_ep          & 0.922845          & 0.964053          & 0.975223          & 0.523027          & 0.901822 \\ \hline
+             em\_cl\_trk\_dT          & 0.991507          & 0.998558          & 0.999985          & 0.999161          & 0.998608 \\ \hline
+             ep\_cl\_trk\_dT          & 0.993079          & 0.999868          & 0.999992          & 0.997071          & 0.999635 \\ \hline
+                    dX\_em          & 0.971854          & 0.978341          & 0.983099          & 0.979244          & 0.978416 \\ \hline
+                    dX\_ep          & 0.970966          & 0.982448          & 0.980633          & 0.960492          & 0.980585 \\ \hline
+        PSumMin\_MinvBin\_0          & 0          & 0          & 0          & -nan          & 0 \\ \hline
+        PSumMin\_MinvBin\_1          & 0.198586          & 0.18593          & 0.406154          & 0.570248          & 0.191148 \\ \hline
+        PSumMin\_MinvBin\_2          & 0.546544          & 0.536306          & 0.784803          & 0.870588          & 0.553026 \\ \hline
+        PSumMin\_MinvBin\_3          & 0.769379          & 0.764507          & 0.916614          & 0.959608          & 0.779726 \\ \hline
+        PSumMin\_MinvBin\_4          & 0.883288          & 0.882971          & 0.964754          & 0.977667          & 0.890987 \\ \hline
+        PSumMin\_MinvBin\_5          & 0.916738          & 0.917299          & 0.97954          & 0.98227          & 0.922687 \\ \hline
+        PSumMin\_MinvBin\_6          & 0.913738          & 0.922544          & 0.984273          & 1          & 0.928158 \\ \hline
+        PSumMin\_MinvBin\_7          & 0.912298          & 0.917476          & 0.983379          & 0.967742          & 0.921494 \\ \hline
+        PSumMin\_MinvBin\_8          & 0.924835          & 0.918172          & 0.987276          & 1          & 0.923257 \\ \hline
+        PSumMin\_MinvBin\_9          & 0.935687          & 0.918421          & 0.993275          & 1          & 0.921291 \\ \hline
+       PSumMin\_MinvBin\_10          & 0.963074          & 0.965116          & 1          & 1          & 0.966467 \\ \hline
+       PSumMin\_MinvBin\_11          & 0.97546          & 1          & 0.989547          & 1          & 1 \\ \hline
+
+ \end{tabular}
+
+\end{table}
+
+
+
 \end{document}
 
