--- a/pass4/Latex/EvSelectionPlots.tex
+++ b/pass4/Latex/EvSelectionPlots.tex
@@ -307,32 +307,33 @@
  \begin{tabular}{|l | c | c | c | c | c |}
  \hline
  \bf{CutDescription}   & \bf{Data} & \bf{Tri-beam} & \bf{Rad-beam} & \bf{Wab-beam} & \bf{Tri + Wab}  \\ \hline
-                    PsumMax          & 0.996641          & 0.998864          & 0.998858          & 0.987156          & 0.997881 \\ \hline
-                  PsumMin          & 0.577292          & 0.538798          & 0.827853          & 0.904518          & 0.557535 \\ \hline
-                     clDt          & 0.973964          & 0.994342          & 0.997401          & 0.993122          & 0.994241 \\ \hline
-                      Pem          & 0.999911          & 0.999973          & 0.999969          & 1          & 0.999975 \\ \hline
-                    d0\_ep          & 0.922845          & 0.964053          & 0.975223          & 0.523027          & 0.901822 \\ \hline
-             em\_cl\_trk\_dT          & 0.991507          & 0.998558          & 0.999985          & 0.999161          & 0.998608 \\ \hline
-             ep\_cl\_trk\_dT          & 0.993079          & 0.999868          & 0.999992          & 0.997071          & 0.999635 \\ \hline
-                    dX\_em          & 0.971854          & 0.978341          & 0.983099          & 0.979244          & 0.978416 \\ \hline
-                    dX\_ep          & 0.970966          & 0.982448          & 0.980633          & 0.960492          & 0.980585 \\ \hline
+                  PsumMax          & 0.996642          & 0.998874          & 0.99886          & 0.986888          & 0.99791 \\ \hline
+                  PsumMin          & 0.577276          & 0.539613          & 0.82845          & 0.904647          & 0.557511 \\ \hline
+                     clDt          & 0.973965          & 0.99436          & 0.997402          & 0.992964          & 0.994249 \\ \hline
+                      Pem          & 0.999911          & 0.999972          & 0.999969          & 1          & 0.999975 \\ \hline
+                    d0\_ep          & 0.922387          & 0.958224          & 0.970544          & 0.495193          & 0.892889 \\ \hline
+             em\_cl\_trk\_dT          & 0.991506          & 0.998557          & 0.999986          & 0.999115          & 0.998602 \\ \hline
+             ep\_cl\_trk\_dT          & 0.993081          & 0.999867          & 0.999992          & 0.996909          & 0.999631 \\ \hline
+                    dX\_em          & 0.971858          & 0.978334          & 0.983098          & 0.979822          & 0.978452 \\ \hline
+                    dX\_ep          & 0.970964          & 0.982677          & 0.980798          & 0.959015          & 0.980751 \\ \hline
         PSumMin\_MinvBin\_0          & 0          & 0          & 0          & -nan          & 0 \\ \hline
-        PSumMin\_MinvBin\_1          & 0.198586          & 0.18593          & 0.406154          & 0.570248          & 0.191148 \\ \hline
-        PSumMin\_MinvBin\_2          & 0.546544          & 0.536306          & 0.784803          & 0.870588          & 0.553026 \\ \hline
-        PSumMin\_MinvBin\_3          & 0.769379          & 0.764507          & 0.916614          & 0.959608          & 0.779726 \\ \hline
-        PSumMin\_MinvBin\_4          & 0.883288          & 0.882971          & 0.964754          & 0.977667          & 0.890987 \\ \hline
-        PSumMin\_MinvBin\_5          & 0.916738          & 0.917299          & 0.97954          & 0.98227          & 0.922687 \\ \hline
-        PSumMin\_MinvBin\_6          & 0.913738          & 0.922544          & 0.984273          & 1          & 0.928158 \\ \hline
-        PSumMin\_MinvBin\_7          & 0.912298          & 0.917476          & 0.983379          & 0.967742          & 0.921494 \\ \hline
-        PSumMin\_MinvBin\_8          & 0.924835          & 0.918172          & 0.987276          & 1          & 0.923257 \\ \hline
-        PSumMin\_MinvBin\_9          & 0.935687          & 0.918421          & 0.993275          & 1          & 0.921291 \\ \hline
-       PSumMin\_MinvBin\_10          & 0.963074          & 0.965116          & 1          & 1          & 0.966467 \\ \hline
-       PSumMin\_MinvBin\_11          & 0.97546          & 1          & 0.989547          & 1          & 1 \\ \hline
+        PSumMin\_MinvBin\_1          & 0.19857          & 0.186411          & 0.406967          & 0.569364          & 0.191415 \\ \hline
+        PSumMin\_MinvBin\_2          & 0.546532          & 0.537062          & 0.785559          & 0.871142          & 0.553007 \\ \hline
+        PSumMin\_MinvBin\_3          & 0.769339          & 0.765048          & 0.916863          & 0.959658          & 0.779528 \\ \hline
+        PSumMin\_MinvBin\_4          & 0.883268          & 0.882856          & 0.964886          & 0.977893          & 0.890604 \\ \hline
+        PSumMin\_MinvBin\_5          & 0.916717          & 0.916973          & 0.979517          & 0.981481          & 0.922139 \\ \hline
+        PSumMin\_MinvBin\_6          & 0.913699          & 0.922699          & 0.984234          & 1          & 0.928075 \\ \hline
+        PSumMin\_MinvBin\_7          & 0.912254          & 0.917006          & 0.983266          & 0.966667          & 0.920878 \\ \hline
+        PSumMin\_MinvBin\_8          & 0.924821          & 0.917559          & 0.987507          & 1          & 0.922718 \\ \hline
+        PSumMin\_MinvBin\_9          & 0.935687          & 0.917333          & 0.993248          & 1          & 0.920279 \\ \hline
+       PSumMin\_MinvBin\_10          & 0.963074          & 0.964912          & 1          & 1          & 0.966279 \\ \hline
+       PSumMin\_MinvBin\_11          & 0.97546          & 1          & 0.98951          & 1          & 1 \\ \hline
 
+ 
  \end{tabular}
 
 \end{table}
-
+ 
 
 \clearpage
 \newpage
@@ -342,6 +343,66 @@
  \grinp[width=0.95\tw]{Figs/fRad_MassBins.pdf}
  \caption{Radiative fraction as a function of mass.}
 \end{figure}
+ 
+\clearpage
+\newpage
+\subsection*{Cut Categories}
+Final selection of events were categorized depending which cuts a givem V0 is passed.
+A single integer number is a representation of what cuts were passed for a given V0 candidate. 
+\begin{itemize}
+ \item If the bit 0 is set, it means there is only on V0 that pass all the given set of cuts. otherwise it is not set
+\item If the bit 1 is set, it means the $\mathrm{d_{0}}$ cut is applie to the $e^{+}$ of a given V0, otherwise it is not set.
+\item If the bit 2 is set, it means a L1 required for  given V0 candidate. 
+\end{itemize}
+
+The figure below show the cut and bit correspondence.
+As an axample the Cut category 5 is ``101'', and it means L1 is required for $e^{+}$, No cut on $\mathrm{d_{0}}$ and there is only one V0 in the event that pass the given set of cuts.
+\begin{figure}[!htb]
+ \centering
+ \grinp[width=0.95\tw]{Figs/CutBits.png}
+ \caption{Bit representation of cut set.}
+\end{figure}
+
+ 
+\clearpage
+\newpage
+\subsection*{Invariant mass distributions}
+Figures in this section represent 10\% of all 2016 run data, more preciesly fils that have file number ending eith 0.
+ \begin{figure}[!htb]
+  \centering
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_0.pdf}
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_1.pdf}
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_2.pdf} \\
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_3.pdf}
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_4.pdf}
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_5.pdf} \\
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_6.pdf}
+  \grinp[width=0.32\tw]{Figs/Minv_General_Final_Cut_7.pdf}
+  \caption{The mass distributions for difference cut categories. These figures
+  represent the blinded 10\% sample of rh 2016 Run.}
+ \end{figure}
+
+ 
+\clearpage
+\newpage
+\subsection*{Run By Run Variations}
+Note the \underline{Run 8043 is excluded from these plots}, I think the luminosity is not properly
+calculated it's normalization is about $\times 4$ is of from the rest of runs.
+ 
+ \begin{figure}[!htb]
+  \centering
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_0.pdf}
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_1.pdf}
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_2.pdf}\\
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_3.pdf}
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_4.pdf}
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_5.pdf}\\
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_6.pdf}
+  \grinp[width=0.32\tw]{Figs/RuntoRumMinvIntegral_Category_7.pdf}
+  \caption{Integrated number of final events normalized by charge for different runs.
+  different plots represent different cut categoried.}
+ \end{figure}
+
  
 \end{document}
 
