A small text addition in EvSelectionPlots.tex file

--- a/pass4/Latex/EvSelectionPlots.tex
+++ b/pass4/Latex/EvSelectionPlots.tex
@@ -387,7 +387,7 @@ Figures in this section represent 10\% of all 2016 run data, more preciesly fils
 \newpage
 \subsection*{Run By Run Variations}
 Note the \underline{Run 8043 is excluded from these plots}, I think the luminosity is not properly
-calculated it's normalization is about $\times 4$ is of from the rest of runs.
+calculated for this particular run. it's normalization is about $\times 4$ is of from the rest of runs.
  
  \begin{figure}[!htb]
   \centering
